permmision-bug tag html

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -13,6 +13,11 @@
 @import "./sidebar/style";
 @import "./updates/style";
 @import "./files/style";
+@import "./files/create-tag/style";
+@import "./files/invite-team-users/style";
+@import "./files/link-share/style";
+@import "./files/move-file/style";
+@import "./files/preview-file/style";
 @import "./contacts/style";
 @import "./trash/style";
 @import "./upload-progress-dialog/style";
