--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -44,7 +44,7 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">        
-              <li role="presentation" ng-repeat="value in permission_value" ng-click = "selectedPermission(value)">
+              <li role="presentation" ng-repeat="value in permission_value_list" ng-click = "selectedPermission(value)">
                 <a role="menuitem" tabindex="-1">
                   {{value}}
                 </a>
