--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -514,6 +514,9 @@
     }
     
     .users.is_owner{
+        .user-permission{
+            color: #000000;
+        }
         .dropdown-menu{
             display: none;
         }
@@ -582,26 +585,6 @@
    border-left: 1px solid #ccc;
 }
 
-//移动文件夹
-.move-file-modal-view{
-    div[data-tree-model] li .expanded {
-        background-image: url("../../images/tree_ico.png");
-        background-repeat: no-repeat;
-        padding: 1px 10px;
-    }
-    
-    div[data-tree-model] li .collapsed {
-        background-image: url("../../images/tree_ico.png");
-        background-repeat: no-repeat;
-        padding: 1px 10px;
-    }
-    div[data-tree-model] li .normal {
-        background-image: url("../../images/tree_ico.png");
-        background-repeat: no-repeat;
-        padding: 1px 10px;
-    }
-}
-
 //讨论
 .user-discuss-view {
     padding: 5px;
@@ -636,332 +619,6 @@
         bottom: 70px;
         height: 130px;
         position: absolute;
-    }
-}
-
-//邀请协作人
-.invite-team-users{
-    h3{
-      margin-left: 15px;
-    }
-    h5{
-      margin-top: 24px;
-    }
-    .modal-dialog {
-        width: 100%;
-
-        .modal-content {
-            border: none;
-            border-radius: none;
-            background: transparent;
-             box-shadow: none;
-        }
-    }
-    .invite-team-users-inner {
-//      transition:width 0.5s;
-//      -moz-transition:width 0.5s; /* Firefox 4 */
-//      -webkit-transition:width 0.5s; /* Safari and Chrome */
-//      -o-transition:width 0.5s; /* Opera */
-        width: 400px;
-        border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        margin: 0 auto;
-        background: white;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        &.broad {
-            width: 700px;
-        }
-    }
-    .invite-form{
-        height: 500px;
-        .invite-content{
-            width: 360px;
-        }
-        .input-from-group{
-            margin-bottom: 5px;
-        }
-        .or-from-group{
-            margin-bottom: 5px;
-            text-align: center;
-        }
-        .select-from-group{
-            margin-bottom: 5px;
-        }
-        .selected-groups-users{
-            border: 1px solid #e5e5e5;
-            margin-left: 15px;
-            height: 76px;
-            padding: 0;
-            width: 92%;
-            position: relative;
-            overflow-y: hidden;
-        }
-        .dropdown{
-          button{
-            text-align: left;
-            span.caret{
-              margin-left: 250px;
-            }
-            
-          }
-          .dropdown-menu{
-              width: 100%;
-              text-align: left;
-              li{
-                cursor:pointer;
-              }
-          }
-        }
-
-        textarea.comment-input {
-          height: 54px;
-          font-size: 12px;
-          color: #666;
-        }
-        
-        .selectedItem{
-            background: none repeat scroll 0 0 #eee;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            float: left;
-            margin: 5px;
-            padding: 3px;
-            .deleteSelected{
-                padding: 5px;
-                cursor: pointer;
-            }
-        }
-        form{
-            height: 100%;
-            h5{
-              border-bottom: 1px solid #e5e5e5;  
-            }
-        }
-        .select-invite{
-            height: 100%;
-            border-left: 1px solid #e5e5e5;
-            width: 300px;
-            .form-group{
-                height: 20px;
-            }
-            .group{
-                padding: 5px;
-                .group-user{
-                    padding-top: 5px;
-                    padding-bottom: 5px;
-                    padding-left: 25px;
-                }
-            }
-            .user{
-                padding: 5px;
-            }
-            .scroller{
-              overflow-x: hidden;  
-              overflow-y: hidden;
-              bottom: 0;
-              left: 0;
-              margin-left: 15px;
-              right: 0;
-              top: 55px;
-              position: absolute;
-              padding-right: 5px;
-              .group-name{
-                  max-width: 90px;
-              }   
-            }
-             .arrows-img{
-                background: url("../../images/arrows.png") no-repeat scroll 0 -113px rgba(0, 0, 0, 0);
-                cursor: pointer;
-                float: right;
-                height: 8px;
-                margin-top: 8px;
-                transition: -moz-transform 0.2s ease 0s;
-                width: 15px;
-             }
-        }
-      
-    }
-}
-
-//链接分享
-.link-share{
-    .modal-dialog{
-        width: 350px;
-        .input-group{
-            margin-bottom: 5px;
-        }
-        .dropdown{
-          button{
-            text-align: left;
-            span.caret{
-              margin-left: 238px;
-            }
-          }
-          .dropdown-menu{
-              text-align: left;
-              width: 100%;
-              li{
-                  cursor: pointer;
-              }
-          }
-        }
-        
-        .input-password{
-            margin-top: 5px;
-        }
-        .code_src{
-            margin-right: 5px;
-        }
-    }
-}
-
-//文件预览
-.preview-file{
-    .preview-file-inner{
-        width: 600px;
-        border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-        margin: 0 auto;
-        background: white;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        &.broad {
-            width: 900px;
-        }
-    }
-    
-    .modal-dialog{
-        height: 90%;
-        width: 90%;
-    }
-    .modal-content{
-        height: 100%;
-    }
-    .upload-new-version{
-        float: right;
-        padding: 1px 3px;
-    }
-    .preview-view{
-        height: 100%;
-        .image-preview{
-            text-align: center;
-            bottom: 0;
-            left: 13px;
-            position: absolute;
-            right: 14px;
-            top: 40px;
-            img{
-                height: 100%;
-                width: 70%;
-            }
-        }
-        .txt-preview{
-            word-break: break-all;
-            bottom: 0;
-            left: 13px;
-            position: absolute;
-            right: 14px;
-            top: 40px;
-            overflow-y: auto;
-        }
-        .office-preview{
-            border: 1px solid #e5e5e5;
-            bottom: 0;
-            left: 13px;
-            position: absolute;
-            right: 14px;
-            top: 40px;
-        }
-    }
-    .modal-body{
-        position: relative;
-        height: 100%;
-    }
-    .preview-action{
-        position: absolute;
-        bottom: 0;
-    }
-    .modal-header{
-        padding: 0;
-    }
-    .discuss-version-view{
-        border-left: 1px solid #e5e5e5;
-        height: 100%;
-        .nav-sidebar{
-            .ver{
-              margin-left: 15px;  
-            }
-            li{
-               float: left;
-               cursor: pointer;
-               &.active{
-                   border-bottom: 2px solid #428bca;
-               }
-            }
-        }
-        .scroller {
-          position: absolute;
-          top: 30px;
-          left: 15px;
-          right: 0;
-          bottom: 110px;
-          overflow-y: hidden;
-        }
-        .discuss{
-          .disc-item{
-            padding: 10px;
-            img{
-              float: left;
-            }
-            .disc-box{
-              margin-left: 35px;
-              .disc-name{
-                color: #c0c0c0;
-                font-size: 12px;
-              }
-            .disc-time{
-                color: #c0c0c0;
-                font-size: 12px;
-            }
-          }
-          }
-        }
-        
-        .version{
-            position: absolute;
-            top: 30px;
-            left: 15px;
-            right: 0;
-            bottom: 0;
-            overflow-y: hidden;
-            overflow-x: hidden;
-            padding-right: 15px;
-            .version-item{
-                height: 40px;
-                border-bottom: 1px solid #e5e5e5;
-                .row{
-                    margin: 0;
-                }
-                .version-action{
-                    cursor: pointer;
-                    width: 19px;
-                    height: 17px;
-                    background: url("../../images/download_btn_off.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);;
-                }
-                .version-action:hover{
-                    background: url("../../images/download_btn_on.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);;
-                }
-            }
-        }
-        
-        .disc-inputbox{
-          bottom: 0;
-          height: 100px;
-          position: absolute;
-          label{
-              margin-top: 8px;
-              margin-right: 5px;
-          }
-        }
     }
 }
 
