--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -274,8 +274,10 @@
     background-position: 0px -19px;
     height:19px;
     width: 16px;
-    cursor: pointer;
-    margin-left: 10px;  
+    margin-left: 10px;
+    &.is_edit{
+       cursor: pointer; 
+    } 
   }
   
   .position-fixed {
