--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -50,7 +50,7 @@
 		<div class="folder-grid">
 			<div class="table">
 					<div ng-show = "showCreateFolderDiv" class="create-folder-div">
-							<input type="text" placeholder="文件夹名称" class="create-folder form-control col-sm-8" ng-model = "createFolderData.createFolderName" ng-enter = "createFolder(createFolderData.createFolderName)" focus-me="myInputFocus">
+							<input type="text" placeholder="文件夹名称" class="create-folder form-control col-sm-8" ng-model = "createFolderData.createFolderName" ng-enter = "createFolder(createFolderData.createFolderName)" focus-me="createFolderData.myInputFocus">
 							<div class="create-buttonGroup col-sm-6">
 								<button ng-click="createFolder(createFolderData.createFolderName)" class="btn btn-default">
 									确定
