--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -47,6 +47,7 @@
     </div>
   </div>
   <perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="objList">
+  	<loading-indicator ng-show="loading"></loading-indicator>
 		<div class="folder-grid">
 			<div class="table">
 					<div ng-show = "showCreateFolderDiv" class="create-folder-div">
