--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -239,6 +239,13 @@
         padding: 1px 4px;
         border-radius: 1px;
         border: 1px solid #E0E0E0;
+        transition: background 0.25s linear 0s;
+        margin-right: 2px;
+      }
+      .add-tag:hover{
+        cursor: pointer;
+        background: #448DE8;
+        color: #fff;  
       }
     }  
   }
