--- a/src/app/files/create-tag/style.less
+++ b/src/app/files/create-tag/style.less
@@ -1,15 +1,27 @@
 //标签设置
 .create-tag{
+    .form-control::-moz-placeholder {
+      color: #acb4bf;
+      opacity: 1;
+    }
+    .form-control:-ms-input-placeholder {
+      color: #acb4bf;
+    }
+    .form-control::-webkit-input-placeholder {
+      color: #acb4bf;
+    }
+    
     .modal-dialog{
        width: 450px; 
        .modal-body{
-            height: 300px;
+            height: 175px;
         }
     }
 
     .tag-list{
         float: left;
         width: 100%;
+        height: 60px;
         .tag{
             background: none repeat scroll 0 0 #eee;
             border: 1px solid #ccc;
@@ -33,10 +45,13 @@
         text-align: center;
         float: left;
         width: 100%;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
     .add-tag-title{
         float: left;
         width: 100%;
+        margin-bottom: 5px;
     }
     .add-tag-form{
         float: left;
