--- a/src/app/files/create-tag/template.html
+++ b/src/app/files/create-tag/template.html
@@ -5,17 +5,16 @@
 	<h3 class="modal-title">设置标签</h3>
 </div>
 <div class="modal-body">
-	<div class="tag-list">
-		<div class="tag">
-			<span class="tag-name ng-binding">tony1</span>
-			<span ng-click="deleteSelectedGroup(group)" class="fa fa-times delete-tag">x</span>
+	<div class="tag-list" ng-show = "obj.tags.length != 0">
+		<div class="tag" ng-repeat="tag in obj.tags">
+		  <span class="tag-name">{{tag.tag_name}}</span>
+      <span ng-click="deleteTag(tag)" class="fa fa-times delete-tag">x</span>
 		</div>
-		<div class="tag" ng-repeat="tag in obj.tag-list"></div>
 	</div>
-	<div class="empty-tag-list">没有标签</div>
+	<div class="empty-tag-list" ng-show = "obj.tags.length == 0">没有标签</div>
 	<div class="add-tag-title">添加一个标签</div>
 	<div class="add-tag-form">
-		<input type="text" placeholder="每个文件最多3个标签，每个标签不超过8个字" class="form-control add-tag-input" maxlength="8">
-		<button class="btn btn-primary add-tag-button">添加</button>
+		<input type="text" placeholder="每个文件最多3个标签，每个标签不超过6个字" class="form-control add-tag-input" maxlength="6" ng-model = "tag_name">
+		<button class="btn btn-primary add-tag-button" ng-click = "createTag()">添加</button>
 	</div>
 </div>
