--- a/src/admin/admin.less
+++ b/src/admin/admin.less
@@ -5,6 +5,8 @@
 @import "../themes/@{theme}/colors";
 @import "../themes/@{theme}/variables";
 
+@import "../global/loading-indicator/style";
+
 @import "./global";
 
 @import "./widgets/notification/style";
