--- a/src/admin/users/groups/style.less
+++ b/src/admin/users/groups/style.less
@@ -3,6 +3,9 @@
   a{
     text-decoration: none;     
   }
+  .spinner{
+      margin: 70px auto;
+  }
   .buttonGroup{
       border-bottom: 1px solid #afafaf;
       margin-left: 40px;
