upload select many files

--- a/src/app/files/modal-upload.html
+++ b/src/app/files/modal-upload.html
@@ -9,7 +9,7 @@
     ng-file-drop="onFileSelect($files)"
     ng-file-drag-over-class="drop-box-over"
     ng-file-drag-over-delay="100">
-    <div ng-file-select="onFileSelect($files)" class="upload-select"><a>选择要上传的文件</a></div>
+    <div ng-file-select="onFileSelect($files)" class="upload-select" data-multiple="true"><a>选择要上传的文件</a></div>
     <div class="upload-drop">也可以拖拽文件到该区域，完成上传</div>
   </div>
 </div>
