--- a/src/link-share/main/style.less
+++ b/src/link-share/main/style.less
@@ -1,6 +1,20 @@
 //文件列表
 .link-share{
     height: 100%;
+    
+    .expiration-date{
+        margin-right: 5px;
+    }
+    
+    .scroller {
+        overflow-y: hidden;
+        bottom: 30px;
+        left: 0;
+        margin-left: 40px;
+        right: 0;
+        top: 138px;
+        position: absolute;
+  }
 }
 
 
@@ -98,13 +112,13 @@
      }
   }
   .folder-grid {
-     bottom: 30px;
-     left: 0;
-     margin-left: 40px;
-//   overflow-y: auto;
-     right: 0;
-     top: 138px;
-     position: absolute;
+//   bottom: 30px;
+//   left: 0;
+//   margin-left: 40px;
+////   overflow-y: auto;
+//   right: 0;
+//   top: 138px;
+//   position: absolute;
     .table{
        height : 100%;      
        bottom: 30px;
@@ -218,7 +232,7 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       padding-left: 8px;
-      padding-top: 5px;
+      padding-top: 12px;
     }
     .tag{
       color: white;
