--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -3,7 +3,7 @@
     <div class="slogan pull-left">云时代的高效协作平台</div>
     <div class="user-info pull-right" dropdown is-open="status.isopen">
       <div class="username dropdown-toggle" ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
-        <span>{{user.user_name}}</span>
+        <span>{{user.real_name}}</span>
         <div class="personalInfor"></div>
       </div>
       <ul class="dropdown-menu" role="menu">
