--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -624,8 +624,30 @@
     img{
         float: left;
     }
+    textarea{
+        height: 70px;
+    }
+    .list-at-user {
+        width: 100%;
+        max-width: 198px;
+        position: absolute;
+        background: white;
+        border: 1px solid #a4a4a4;
+        z-index: 100000;
+        padding: 0px;
+        li{
+            padding: 5px;
+            border-bottom: 1px solid #a4a4a4;
+            list-style-type: none;
+        }
+        li:hover{
+            cursor: pointer;
+            background: #b9dff4;
+        }
+    }
+    
     .scroller {
-        bottom: 210px;
+        bottom: 140px;
         overflow-y: hidden;
         position: absolute;
         top: 64px;
@@ -649,7 +671,7 @@
     }
     .disc-inputbox{
         background-color: white;
-        bottom: 70px;
+        bottom: 0px;
         height: 130px;
         position: absolute;
     }
