--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -173,7 +173,32 @@
 		    </div>
 		   </perfect-scrollbar>
 	    <div class="disc-inputbox col-sm-12">
-			<textarea style="width: 100%;" ng-change = "changeDiscussInput(discussContent)" ng-model = "discussContent" ng-keydown = "createUserDiscussByPress($event)"></textarea>		
+	    <textarea ng-model="message.content"
+      ng-trim="false"
+      rows="5"
+      cols="100"  
+      flag="@"
+      at-user
+      auto-complete
+      ng-change = "changeDiscussInput(discussContent)" ng-model = "discussContent" ng-keydown = "createUserDiscussByPress($event)"
+      style="width: 100%;"
+      ></textarea>
+      <span ng-show="!isAtListHidden" auto-follow="true">
+        <ul class="list-at-user">
+          <li ng-click="autoComplete('aaaa')">
+            aaaaa
+          </li>
+          <li ng-click="autoComplete('user')">
+            bbb
+          </li>
+          <li ng-repeat="user in users | limitTo: 5"
+            ng-click="autoComplete(user)">
+            <span>{{ user.user_name }}</span>
+          </li>
+        </ul>
+      </span>
+      
+<!--			<textarea style="width: 100%;" ng-change = "changeDiscussInput(discussContent)" ng-model = "discussContent" ng-keydown = "createUserDiscussByPress($event)"></textarea>		-->
 			<button class="btn btn-default pull-right" ng-disabled="discussButton" ng-click = "createUserDiscuss()">
 				发表
 			</button>
