--- a/src/app/global.less
+++ b/src/app/global.less
@@ -68,10 +68,11 @@ textarea{
     border-right: 1px solid #b0b0b0;
     box-shadow: 0 0 3px #b0b0b1;
 //  display: none;
-    height: 100%;
+//  height: 100%;
     position: absolute;
     right: 0;
     top: 0;
+    bottom: 40px;
     width: 460px;
 }
 
