--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -640,6 +640,9 @@
             border-bottom: 1px solid #a4a4a4;
             list-style-type: none;
         }
+        li.list-cur{
+            background: #b9dff4;
+        }
         li:hover{
             cursor: pointer;
             background: #b9dff4;
@@ -674,6 +677,10 @@
         bottom: 0px;
         height: 130px;
         position: absolute;
+        label{
+            margin-top: 5px;
+            margin-right: 5px;
+        }
     }
 }
 
