--- a/src/admin/reports/style.less
+++ b/src/admin/reports/style.less
@@ -1,3 +1,123 @@
 .reports-view {
-  color: green;
+  color: grey;
 }
+
+.top-bar{
+  height: 60px;
+  padding-left: 60px;
+  padding-top: 20px;
+  color: #333;
+  font-size: 14px;
+  line-height: 1.42857;
+}
+.top-bar-bottom{
+  background-image: url("../../images/top_shadow.png");
+  background-size: 100% 100%;
+  height: 6px;
+}
+
+.title{
+  border-bottom: 1px solid #afafaf;
+  font-weight: bold;
+  height: 35px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.buttonGroup{
+  border-bottom: 1px solid #afafaf;
+  height: 45px;
+  margin-left: 30px;
+  padding-top: 8px;
+  padding-bottom: 5px;
+  margin-right: 30px;
+}
+.buttonGroup button {
+  margin-left: 5px;
+  padding: 3px 6px;
+  width: 75px;
+}
+.main-bottom {
+  border-top: 1px solid #afafaf;
+  bottom: 0;
+  color: #888;
+  font-size: 12px;
+  height: 40px;
+  left:0px;
+  position: absolute;
+  right: 0;
+}
+.title .col{
+  float: left;
+  padding: 8px;
+  height: 35px;
+}
+
+.log-row{
+  border-bottom: 0.5px solid darkgrey;
+  height: 35px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.title-time{
+  width:200px;
+}
+.title-user{
+  width:10%;
+}
+.title-mail{
+  width: 200px;
+}
+.title-file{
+  width: 20%;
+}
+.title-opreate{
+  width: 80px;
+}
+.title-fileExt{
+  width: 90px;
+}
+
+.log-time{
+  width:200px;
+  float: left;
+  padding: 8px;
+
+}
+.log-user{
+  width:10%;
+  float: left;
+  padding: 8px;
+}
+.log-mail{
+  width:200px;
+  float: left;
+  padding: 8px;
+}
+.log-file{
+  width: 20%;
+  float: left;
+  padding: 8px;
+}
+.log-opreate{
+  width: 80px;
+  float: left;
+  padding: 8px;
+}
+.log-fileExt{
+  width: 90px;
+  float: left;
+  padding: 8px;
+}
+
+.log-location
+{
+  float: left;
+  padding: 8px;
+}
+
+
+
+
+
+
+
