New UI for Preview.

--- a/src/app/files/preview-file/template.html
+++ b/src/app/files/preview-file/template.html
@@ -46,6 +46,7 @@
       <button class="btn btn-default pull-right" ng-disabled="discussButton" ng-click = "createUserDiscuss()">
         发表
       </button>
+      <label class="pull-left">可@协作人</label>
       <label class="pull-right" >{{discussCount}}/200</label>
     </div>
     <perfect-scrollbar class="version" wheel-propagation="true" wheel-speed="50" refresh-on-change="fileHistoryList" ng-show = "navType == 'ver'" suppress-scroll-x = "true">
