--- a/src/app/files/preview-file/style.less
+++ b/src/app/files/preview-file/style.less
@@ -3,7 +3,9 @@
     .preview-file-inner{
         width: 600px;
         border: 1px solid rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
+        border-top: none;
+        border-bottom: none;
+        border-radius: 0;
         margin: 0 auto;
         background: white;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
@@ -13,25 +15,31 @@
     }
     
     .modal-dialog{
-        height: 90%;
-        width: 90%;
+        height: 100%;
+        width: 94%;
+        margin: 0 auto;
     }
     .modal-content{
         height: 100%;
+        border-radius: 0;
+        border-top: none;
+        border-bottom: none;
     }
     .upload-new-version{
         float: right;
         padding: 1px 3px;
+        margin: 13px 30px 0 0;
     }
     .preview-view{
         height: 100%;
+        padding: 0;
         .image-preview{
             text-align: center;
-            bottom: 0;
+            bottom: 20px;
             left: 13px;
             position: absolute;
             right: 14px;
-            top: 40px;
+            top: 65px;
             img{
                 height: 100%;
                 width: 70%;
@@ -58,6 +66,7 @@
     .modal-body{
         position: relative;
         height: 100%;
+        padding: 0;
     }
     .preview-action{
         position: absolute;
@@ -65,28 +74,46 @@
     }
     .modal-header{
         padding: 0;
+        height: 50px;
+        border-bottom-color: #C3C3C3;
+        h3 {
+            height: 50px;
+            line-height: 50px;
+            font-weight: lighter;
+            padding-left: 30px;
+        }
     }
     .discuss-version-view{
         border-left: 1px solid #e5e5e5;
         height: 100%;
+        padding: 0;
         .nav-sidebar{
-            .ver{
-              margin-left: 15px;  
-            }
+            height: 36px;
+            padding: 0 20px;
+            border-bottom: 1px solid #C3C3C3;
+            background-color: #E9EDF1;
             li{
                float: left;
                cursor: pointer;
+               margin: 7px 20px 0 0;
+
                &.active{
-                   border-bottom: 2px solid #428bca;
+                   color: #1F6ABD;
                }
+            }
+            .close {
+                font-size: 24px;
+                margin-top: 6px;
             }
         }
         .scroller {
           position: absolute;
-          top: 30px;
-          left: 15px;
+          top: 36px;
+          left: 0;
           right: 0;
           bottom: 110px;
+          padding-top: 12px;
+          padding-left: 10px;
           overflow-y: hidden;
         }
         .discuss{
@@ -138,11 +165,38 @@
         
         .disc-inputbox{
           bottom: 0;
-          height: 100px;
+          height: 160px;
           position: absolute;
+          textarea {
+            box-sizing: border-box;
+            width: 100%;
+            border: 1px solid #c3c3c3;
+            border-left: none;
+            border-right: none;
+            height: 120px;
+            padding: 5px;
+          }
+          textarea:focus {
+            outline: none;
+            border-color: #B8B8B8;
+            box-shadow: 0 -3px 5px #C3C3C3;
+          }
           label{
-              margin-top: 8px;
+              margin-top: 4px;
               margin-right: 5px;
+              color: #777;
+              font-weight: lighter;
+          }
+          label.pull-left {
+            margin-left: 5px;
+            font-size: 12px;
+          }
+
+          button {
+            padding: 2px 10px;
+            margin-right: 10px;
+            background: #1F6ABD;
+            color: #fff;
           }
         }
     }
