linkshare-bug-preview

--- a/src/link-share/link-share.less
+++ b/src/link-share/link-share.less
@@ -12,4 +12,5 @@
 @import "./header/style";
 @import "./sidebar/style";
 @import "./main/style";
+@import "./main/preview-file/style";
 @import "./upload-progress-dialog/style";
