--- a/src/link-share/main/style.less
+++ b/src/link-share/main/style.less
@@ -112,13 +112,6 @@
      }
   }
   .folder-grid {
-//   bottom: 30px;
-//   left: 0;
-//   margin-left: 40px;
-////   overflow-y: auto;
-//   right: 0;
-//   top: 138px;
-//   position: absolute;
     .table{
        height : 100%;      
        bottom: 30px;
@@ -297,6 +290,16 @@
     .name-email{
         float: left;
         width: 70%;
+        .owner-uname{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+        .email{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
     .explain-title{
         border-bottom: 1px solid #cfcfcf;
