--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -23,7 +23,7 @@
            <loading-indicator ng-show="loading"></loading-indicator>
            <div class="no-message" ng-show = "messageList.length == 0"></div>
            <li ng-click = "messageDetail(message)" ng-repeat="message in messageList" ng-class = "{ isRead : message.is_read == 'true' }" ng-hide = "messageList.length == 0">
-             <a ui-sref="files({folderId: message.folder_id})">
+             <a>
               <div>
                 <img class="message-userpic" ng-src="{{message.avatar}}" alt="" height="30px" width="30px"/>
                 <div class="message-content">
@@ -50,8 +50,8 @@
        <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="">
           <loading-indicator ng-show="loading"></loading-indicator>
           <div class="no-notice" ng-show = "noticeList.length == 0"></div>
-          <li ng-repeat="message in noticeList" ng-class = "{ isRead : message.is_read == 'true' }" ng-hide = "messageList.length == 0" >
-             <a ui-sref="files({folderId: message.folder_id})">
+          <li ng-repeat="message in noticeList" ng-class = "{ isRead : message.is_read == 'true' }" ng-hide = "noticeList.length == 0" >
+             <a>
               <div>
                 <img class="message-userpic" ng-src="{{message.avatar}}" alt="" height="30px" width="30px"/>
                 <div class="message-content">
