New UI for Message System

--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -16,7 +16,7 @@
       管理控制台
     </div>
     <div class="notif_box" class="message-notice pull-right">
-      <div class="message-dropdown" dropdown>
+      <div class="message-dropdown active" dropdown>
         <span class="message dropdown-toggle" title="消息" ng-click = "openMessageList()"></span>
         <label class="message-count letter-count" ng-show = "showMessageCount">{{messageCount}}</label>
         <perfect-scrollbar class="dropdown-menu" role="menu" class="scroller" wheel-propagation="true" wheel-speed="20" refresh-on-change="true">
